[package]
name = "offline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.6.0"
actix-web = "3.3.3"
bytes = "1.1.0"
lazy_static = "1.4.0"
queryst = "2.1.0"
reverse_geocoder = "2.0.1"
serde = "1.0.135"
serde_derive = "1.0.135"
time = "0.3.6"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
